# kicad-laser-tracer

./: .gitignore  README.md  pyproject.toml
example/: example.kicad_pcb
src/kicad_laser_tracer/: __init__.py  __main__.py  cli.py  core.py  pcbnew_discovery.py  setup.py
