[project]
name = "kicad-laser-tracer"
version = "0.1.0"
description = "Generate isolation routing SVGs from KiCad PCB files for laser cutting"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kigadgets>=0.5.0",
]

[project.scripts]
kicad-laser-tracer = "kicad_laser_tracer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# We need to use KiCad's Python which has pcbnew
python-preference = "only-system"

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_laser_tracer"]